kubernetes/apps/ai/flowise/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flowise
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: openai.png
    gethomepage.dev/name: Flowise
    gethomepage.dev/group: AI
    gethomepage.dev/description: Платформа для создания LLM-приложений
spec:
  hostnames: ["ai.astrateam.net"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: flowise
          namespace: ai
          port: 3000
